[package]
name = "rust-echo-bot-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
line_bot_sdk = { git = "https://github.com/shinbunbun/line-bot-example-rust/", rev = "e5cd96174e7274a096484d9715ef393e73c56ccd"}
actix-web = "4"
env_logger="0"
log="0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0"
thiserror = "1.0.32"
