[package]
name = "rust-echo-bot-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
line_bot_sdk = { git = "https://github.com/shinbunbun/line-bot-example-rust/", rev = "e5cd96174e7274a096484d9715ef393e73c56ccd"}
log = "0.4.17"
serde = "1.0.144"
serde_json = "1.0.85"
thiserror = "1.0.32"
